--- a/index.html
+++ b/index.html
@@ -2,198 +2,107 @@
 <html lang="sv">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Snake Neon 🐍</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>GameHub 🎮</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
 <style>
-body {
+* {
+    box-sizing: border-box;
     margin: 0;
-    background: radial-gradient(circle, #0f0f1f, #050510);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    font-family: Arial, sans-serif;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+
+body {
+    background: radial-gradient(circle at top, #1f1f2e, #0f0f18);
     color: white;
-    overflow: hidden;
-}
-
-/* wrapper */
-.game-wrapper {
-    text-align: center;
-}
-
-/* titel */
-h1 {
-    margin-bottom: 10px;
-    font-size: 2.5rem;
-    color: #00ffe7;
-    text-shadow: 0 0 20px #00ffe7;
-}
-
-/* score */
-.score {
-    margin-bottom: 10px;
-    opacity: 0.8;
-}
-
-/* canvas */
-canvas {
-    background: #111;
-    border-radius: 20px;
-    box-shadow:
-        0 0 25px #00ffe7,
-        0 0 50px #8a2eff inset;
-}
-
-/* game over */
-.overlay {
-    position: absolute;
-    display: none;
+    min-height: 100vh;
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 10px;
 }
 
-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    background: #00ffe7;
-    font-weight: bold;
+/* HEADER */
+header {
+    text-align: center;
+    padding: 60px 20px 30px;
+}
+
+h1 {
+    font-size: 3.5rem;
+    background: linear-gradient(45deg, #00ffe7, #8a2eff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 10px;
+}
+
+p {
+    opacity: 0.7;
+}
+
+/* GRID */
+.games {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 25px;
+    padding: 40px;
+    max-width: 1100px;
+    margin: auto;
+}
+
+/* GAME CARDS */
+.game-card {
+    background: #1c1c2b;
+    border-radius: 18px;
+    padding: 40px 20px;
+    text-decoration: none;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 500;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: 0.25s ease;
+    border: 2px solid transparent;
+}
+
+.game-card:hover {
+    transform: translateY(-8px) scale(1.05);
+    border: 2px solid #00ffe7;
+    box-shadow: 0 0 25px #00ffe744;
+    background: #24243a;
+}
+
+/* FOOTER */
+footer {
+    text-align: center;
+    padding: 20px;
+    opacity: 0.5;
 }
 </style>
 </head>
 
 <body>
 
-<div class="game-wrapper">
-    <h1>🐍 Neon Snake</h1>
-    <div class="score">
-        Score: <span id="score">0</span> |
-        Highscore: <span id="highscore">0</span>
-    </div>
+<header>
+    <h1>GameHub 🎮</h1>
+    <p>Välj ett spel och börja spela direkt</p>
+</header>
 
-    <canvas id="game" width="420" height="420"></canvas>
-</div>
+<section class="games">
+    <a href="spel1/index.html" class="game-card">🕹️ Snake</a>
+    <a href="spel2/index.html" class="game-card">🧠 Memory</a>
+    <a href="spel3/index.html" class="game-card">🚀 Space Shooter</a>
+    <a href="spel4/index.html" class="game-card">🏆 Clicker</a>
+</section>
 
-<div class="overlay" id="overlay">
-    <h2>💀 Game Over</h2>
-    <button onclick="restart()">Spela igen</button>
-</div>
-
-<script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-
-const size = 20;
-const tileCount = canvas.width / size;
-
-let snake = [{x: 10, y: 10}];
-let dx = 1;
-let dy = 0;
-
-let food = randomFood();
-
-let score = 0;
-let highscore = localStorage.getItem("snakeHigh") || 0;
-
-const scoreEl = document.getElementById("score");
-const highscoreEl = document.getElementById("highscore");
-const overlay = document.getElementById("overlay");
-
-highscoreEl.textContent = highscore;
-
-function randomFood() {
-    return {
-        x: Math.floor(Math.random() * tileCount),
-        y: Math.floor(Math.random() * tileCount)
-    };
-}
-
-function drawRect(x, y, color, glow) {
-    ctx.fillStyle = color;
-    ctx.shadowBlur = glow;
-    ctx.shadowColor = color;
-    ctx.fillRect(x * size, y * size, size-2, size-2);
-    ctx.shadowBlur = 0;
-}
-
-function gameLoop() {
-    update();
-    draw();
-}
-
-function update() {
-    const head = {x: snake[0].x + dx, y: snake[0].y + dy};
-
-    // väggar wrap (coolare än dö)
-    head.x = (head.x + tileCount) % tileCount;
-    head.y = (head.y + tileCount) % tileCount;
-
-    // krock med sig själv
-    for (let part of snake) {
-        if (part.x === head.x && part.y === head.y) {
-            gameOver();
-            return;
-        }
-    }
-
-    snake.unshift(head);
-
-    if (head.x === food.x && head.y === food.y) {
-        score++;
-        scoreEl.textContent = score;
-        food = randomFood();
-    } else {
-        snake.pop();
-    }
-}
-
-function draw() {
-    ctx.fillStyle = "#111";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-    // snake färg gradient
-    snake.forEach((part, i) => {
-        const hue = (i * 15) % 360;
-        drawRect(part.x, part.y, `hsl(${hue},100%,55%)`, 15);
-    });
-
-    // food
-    drawRect(food.x, food.y, "#ff2e88", 25);
-}
-
-function gameOver() {
-    overlay.style.display = "flex";
-
-    if (score > highscore) {
-        highscore = score;
-        localStorage.setItem("snakeHigh", highscore);
-        highscoreEl.textContent = highscore;
-    }
-}
-
-function restart() {
-    snake = [{x: 10, y: 10}];
-    dx = 1;
-    dy = 0;
-    score = 0;
-    scoreEl.textContent = 0;
-    overlay.style.display = "none";
-}
-
-/* controls */
-document.addEventListener("keydown", e => {
-    if (e.key === "ArrowUp" || e.key === "w") { dx=0; dy=-1; }
-    if (e.key === "ArrowDown" || e.key === "s") { dx=0; dy=1; }
-    if (e.key === "ArrowLeft" || e.key === "a") { dx=-1; dy=0; }
-    if (e.key === "ArrowRight" || e.key === "d") { dx=1; dy=0; }
-});
-
-setInterval(gameLoop, 90);
-</script>
+<footer>
+    © 2026 GameHub
+</footer>
 
 </body>
 </html>
