--- a/index.html
+++ b/index.html
@@ -1,89 +1,83 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>GameHub 🎮</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GameHub 🎮</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
-<style>
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", sans-serif;
-}
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: "Poppins", sans-serif;
+        }
 
-body {
-    background: radial-gradient(circle at top, #1f1f2e, #0f0f18);
-    color: white;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
+        body {
+            background: radial-gradient(circle at top, #1f1f2f, #0f0f18);
+            color: white;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
 
-/* HEADER */
-header {
-    text-align: center;
-    padding: 60px 20px 30px;
-}
+        header {
+            text-align: center;
+            padding: 60px 20px 30px;
+        }
 
-h1 {
-    font-size: 3.5rem;
-    background: linear-gradient(45deg, #00ffe7, #8a2eff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    margin-bottom: 10px;
-}
+        h1 {
+            font-size: 3.5rem;
+            background: linear-gradient(45deg, #00ffe7, #8a2eff);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            margin-bottom: 10px;
+        }
 
-p {
-    opacity: 0.7;
-}
+        p {
+            opacity: 0.7;
+        }
 
-/* GRID */
-.games {
-    flex: 1;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 25px;
-    padding: 40px;
-    max-width: 1100px;
-    margin: auto;
-}
+        .games {
+            flex: 1;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 25px;
+            padding: 40px;
+            max-width: 1100px;
+            margin: auto;
+        }
 
-/* GAME CARDS */
-.game-card {
-    background: #1c1c2b;
-    border-radius: 18px;
-    padding: 40px 20px;
-    text-decoration: none;
-    color: white;
-    font-size: 1.3rem;
-    font-weight: 500;
+        .game-card {
+            background: #1c1c2b;
+            border-radius: 18px;
+            padding: 40px 20px;
+            text-decoration: none;
+            color: white;
+            font-size: 1.3rem;
+            font-weight: 500;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: 0.25s ease;
+            border: 2px solid transparent;
+        }
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+        .game-card:hover {
+            transform: translateY(-8px) scale(1.05);
+            border: 2px solid #00ffe7;
+            box-shadow: 0 0 25px #00ffe744;
+            background: #24243a;
+        }
 
-    transition: 0.25s ease;
-    border: 2px solid transparent;
-}
-
-.game-card:hover {
-    transform: translateY(-8px) scale(1.05);
-    border: 2px solid #00ffe7;
-    box-shadow: 0 0 25px #00ffe744;
-    background: #24243a;
-}
-
-/* FOOTER */
-footer {
-    text-align: center;
-    padding: 20px;
-    opacity: 0.5;
-}
-</style>
+        footer {
+            text-align: center;
+            padding: 20px;
+            opacity: 0.5;
+        }
+    </style>
 </head>
 
 <body>
@@ -94,10 +88,9 @@ footer {
 </header>
 
 <section class="games">
-    <a href="spel1/index.html" class="game-card">🕹️ Snake</a>
-    <a href="spel2/index.html" class="game-card">🧠 Memory</a>
-    <a href="spel3/index.html" class="game-card">🚀 Space Shooter</a>
-    <a href="spel4/index.html" class="game-card">🏆 Clicker</a>
+    <a href="spel1/" class="game-card">🐍 Neon Serpent</a>
+    <a href="spel3/" class="game-card">🧠 Memory</a>
+    <a href="spel2/" class="game-card">🚀 Space Shooter</a>
 </section>
 
 <footer>
