--- a/spel2/index.html
+++ b/spel2/index.html
@@ -1,85 +1,82 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Star Blaster 🚀</title>
-
 <style>
 body {
-    margin: 0;
+    margin:0;
     background: radial-gradient(circle at top, #0a0a18, #020208);
-    overflow: hidden;
+    overflow:hidden;
     font-family: Arial, sans-serif;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    height:100vh;
+    color:white;
 }
 
 .wrapper {
-    position: relative;
-    text-align: center;
+    position:relative;
+    text-align:center;
 }
 
 h1 {
-    color: #00ffe7;
-    text-shadow: 0 0 20px #00ffe7;
+    color:#00ffe7;
+    text-shadow:0 0 20px #00ffe7;
 }
 
 canvas {
-    background: black;
-    border-radius: 20px;
-    box-shadow: 0 0 40px #00ffe7;
+    background:#000;
+    border-radius:20px;
+    box-shadow:0 0 40px #00ffe7;
 }
 
+/* UI */
 .ui {
-    margin: 10px 0;
+    margin:10px 0;
 }
 
 /* Game over */
 .overlay {
-    position: absolute;
-    inset: 0;
-    display: none;
-    background: rgba(0,0,0,0.8);
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 20px;
+    position:absolute;
+    inset:0;
+    display:flex;
+    background:rgba(0,0,0,0.8);
+    justify-content:center;
+    align-items:center;
+    flex-direction:column;
+    border-radius:20px;
+    display:none;
 }
 
 .overlay h2 {
-    color: #ff2e88;
-    font-size: 2.5rem;
-    text-shadow: 0 0 20px #ff2e88;
+    color:#ff2e88;
+    font-size:2.5rem;
+    text-shadow:0 0 20px #ff2e88;
 }
 
 button {
-    margin-top: 15px;
-    padding: 12px 25px;
-    border-radius: 10px;
-    border: none;
-    background: #00ffe7;
-    font-weight: bold;
-    cursor: pointer;
+    margin-top:15px;
+    padding:12px 25px;
+    border-radius:10px;
+    border:none;
+    background:#00ffe7;
+    font-weight:bold;
+    cursor:pointer;
 }
 </style>
 </head>
-
 <body>
 
 <div class="wrapper">
     <h1>🚀 Star Blaster</h1>
-
     <div class="ui">
         Score: <span id="score">0</span> |
         Liv: <span id="lives">3</span>
     </div>
-
-    <canvas id="game" width="500" height="600"></canvas>
-
+    <canvas id="game" width="420" height="500"></canvas>
     <div class="overlay" id="overlay">
         <h2>💀 GAME OVER</h2>
         <button onclick="restart()">Spela igen</button>
@@ -96,73 +93,94 @@ const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
 const overlay = document.getElementById("overlay");
 
-function init() {
-    player = {x:250, y:540, w:40, h:40, speed:6};
+function init(){
+    player = {x:canvas.width/2-20, y:canvas.height-50, w:40, h:40, speed:5};
     bullets = [];
     enemies = [];
     keys = {};
     score = 0;
     lives = 3;
     running = true;
-
     scoreEl.textContent = score;
     livesEl.textContent = lives;
     overlay.style.display = "none";
 }
 
-function spawnEnemy() {
+function spawnEnemy(){
+    // fiender som asteroider / skepp
     enemies.push({
-        x: Math.random()*460,
+        x: Math.random()*(canvas.width-30),
         y: -30,
-        w: 30,
-        h: 30,
-        speed: 2 + Math.random()*2
+        w:30,
+        h:30,
+        speed:2+Math.random()*2,
+        type: Math.random() < 0.5 ? "asteroid" : "enemy"
     });
 }
 
-function drawShip() {
-    ctx.fillStyle = "#00ffe7";
-    ctx.shadowBlur = 20;
-    ctx.shadowColor = "#00ffe7";
-
+function drawPlayer(){
+    ctx.fillStyle="#00ffe7";
+    ctx.shadowBlur=20;
+    ctx.shadowColor="#00ffe7";
+    // triangel-skepp
     ctx.beginPath();
-    ctx.moveTo(player.x+20, player.y);
-    ctx.lineTo(player.x, player.y+40);
-    ctx.lineTo(player.x+40, player.y+40);
+    ctx.moveTo(player.x+player.w/2, player.y);
+    ctx.lineTo(player.x, player.y+player.h);
+    ctx.lineTo(player.x+player.w, player.y+player.h);
     ctx.fill();
-
-    ctx.shadowBlur = 0;
+    ctx.shadowBlur=0;
 }
 
-function drawRect(o, color, glow=0) {
-    ctx.fillStyle = color;
-    ctx.shadowBlur = glow;
-    ctx.shadowColor = color;
-    ctx.fillRect(o.x, o.y, o.w, o.h);
-    ctx.shadowBlur = 0;
+function drawRect(o, color, glow=0){
+    ctx.fillStyle=color;
+    ctx.shadowBlur=glow;
+    ctx.shadowColor=color;
+    ctx.fillRect(o.x,o.y,o.w,o.h);
+    ctx.shadowBlur=0;
 }
 
-function update() {
+function drawEnemy(e){
+    if(e.type==="asteroid"){
+        ctx.fillStyle="#ff8c00";
+        ctx.shadowBlur=15;
+        ctx.shadowColor="#ff8c00";
+        ctx.beginPath();
+        ctx.arc(e.x+e.w/2,e.y+e.h/2,e.w/2,0,Math.PI*2);
+        ctx.fill();
+        ctx.shadowBlur=0;
+    } else {
+        // fiende-skepp
+        ctx.fillStyle="#ff2e88";
+        ctx.shadowBlur=20;
+        ctx.shadowColor="#ff2e88";
+        ctx.beginPath();
+        ctx.moveTo(e.x+e.w/2,e.y);
+        ctx.lineTo(e.x,e.y+e.h);
+        ctx.lineTo(e.x+e.w,e.y+e.h);
+        ctx.fill();
+        ctx.shadowBlur=0;
+    }
+}
+
+function update(){
     if(!running) return;
-
-    // movement
+    // rörelse
     if(keys["ArrowLeft"] || keys["a"]) player.x -= player.speed;
     if(keys["ArrowRight"] || keys["d"]) player.x += player.speed;
-
-    player.x = Math.max(0, Math.min(canvas.width-player.w, player.x));
+    player.x = Math.max(0,Math.min(canvas.width-player.w,player.x));
 
     // bullets
     bullets.forEach(b => b.y -= 8);
-    bullets = bullets.filter(b => b.y > -20);
+    bullets = bullets.filter(b => b.y>-20);
 
     // enemies
     enemies.forEach(e => e.y += e.speed);
 
-    // collision
+    // collision bullets -> enemies
     bullets.forEach((b, bi) => {
-        enemies.forEach((e, ei) => {
-            if(b.x < e.x+e.w && b.x+4 > e.x &&
-               b.y < e.y+e.h && b.y+10 > e.y) {
+        enemies.forEach((e, ei)=>{
+            if(b.x < e.x+e.w && b.x+b.w>e.x &&
+               b.y < e.y+e.h && b.y+b.h>e.y){
                 enemies.splice(ei,1);
                 bullets.splice(bi,1);
                 score += 10;
@@ -172,69 +190,64 @@ function update() {
     });
 
     // enemy hits player
-    enemies.forEach((e, i) => {
+    enemies.forEach((e,i)=>{
         if(e.y+e.h > player.y &&
            e.x < player.x+player.w &&
-           e.x+e.w > player.x) {
+           e.x+e.w > player.x){
             enemies.splice(i,1);
             lives--;
-            livesEl.textContent = lives;
-            if(lives <= 0) gameOver();
+            livesEl.textContent=lives;
+            if(lives<=0) gameOver();
         }
     });
 
     enemies = enemies.filter(e => e.y < canvas.height+40);
 }
 
-function drawStars() {
-    for(let i=0;i<60;i++){
-        ctx.fillStyle = "white";
-        ctx.fillRect(Math.random()*500, Math.random()*600, 2, 2);
+function drawStars(){
+    for(let i=0;i<30;i++){
+        ctx.fillStyle="white";
+        ctx.fillRect(Math.random()*canvas.width, Math.random()*canvas.height,2,2);
     }
 }
 
-function draw() {
-    ctx.fillStyle = "black";
+function draw(){
+    ctx.fillStyle="black";
     ctx.fillRect(0,0,canvas.width,canvas.height);
 
     drawStars();
-
-    drawShip();
-
-    bullets.forEach(b => drawRect(b, "#ff2e88", 10));
-    enemies.forEach(e => drawRect(e, "#8a2eff", 15));
+    drawPlayer();
+    bullets.forEach(b => drawRect(b,"#00ff00",10));
+    enemies.forEach(drawEnemy);
 }
 
-function loop() {
+function loop(){
     update();
     draw();
     requestAnimationFrame(loop);
 }
 
-function shoot() {
-    bullets.push({x: player.x+18, y: player.y, w:4, h:10});
+function shoot(){
+    bullets.push({x:player.x+player.w/2-2,y:player.y,w:4,h:10});
 }
 
-function gameOver() {
-    running = false;
-    overlay.style.display = "flex";
+function gameOver(){
+    running=false;
+    overlay.style.display="flex";
 }
 
-function restart() {
-    init();
-}
+function restart(){init();}
 
 document.addEventListener("keydown", e=>{
-    keys[e.key] = true;
-    if(e.key === " ") shoot();
+    keys[e.key]=true;
+    if(e.key===" ") shoot();
 });
 document.addEventListener("keyup", e=> keys[e.key]=false);
 
-setInterval(spawnEnemy, 800);
+setInterval(spawnEnemy,700);
 
 init();
 loop();
 </script>
-
 </body>
 </html>
