--- a/spel2/index.html
+++ b/spel2/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Star Blaster 🚀</title>
+<title>Asteroid Blaster 🚀</title>
 <style>
 body {
     margin:0;
@@ -33,12 +33,10 @@ canvas {
     box-shadow:0 0 40px #00ffe7;
 }
 
-/* UI */
 .ui {
     margin:10px 0;
 }
 
-/* Game over */
 .overlay {
     position:absolute;
     inset:0;
@@ -71,10 +69,9 @@ button {
 <body>
 
 <div class="wrapper">
-    <h1>🚀 Star Blaster</h1>
+    <h1>🚀 Asteroid Blaster</h1>
     <div class="ui">
-        Score: <span id="score">0</span> |
-        Liv: <span id="lives">3</span>
+        Score: <span id="score">0</span> | Liv: <span id="lives">3</span>
     </div>
     <canvas id="game" width="420" height="500"></canvas>
     <div class="overlay" id="overlay">
@@ -87,8 +84,7 @@ button {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let player, bullets, enemies, keys, score, lives, running;
-
+let player, bullets, asteroids, keys, score, lives, running;
 const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
 const overlay = document.getElementById("overlay");
@@ -96,25 +92,26 @@ const overlay = document.getElementById("overlay");
 function init(){
     player = {x:canvas.width/2-20, y:canvas.height-50, w:40, h:40, speed:5};
     bullets = [];
-    enemies = [];
+    asteroids = [];
     keys = {};
     score = 0;
     lives = 3;
     running = true;
     scoreEl.textContent = score;
     livesEl.textContent = lives;
-    overlay.style.display = "none";
+    overlay.style.display="none";
 }
 
-function spawnEnemy(){
-    // fiender som asteroider / skepp
-    enemies.push({
-        x: Math.random()*(canvas.width-30),
-        y: -30,
-        w:30,
-        h:30,
-        speed:2+Math.random()*2,
-        type: Math.random() < 0.5 ? "asteroid" : "enemy"
+function spawnAsteroid(){
+    const size = 20 + Math.random()*20;
+    asteroids.push({
+        x: Math.random()*(canvas.width-size),
+        y: -size,
+        w: size,
+        h: size,
+        speed: 1 + Math.random()*2,
+        rotation: Math.random()*Math.PI*2,
+        rotationSpeed: (Math.random()-0.5)*0.05
     });
 }
 
@@ -122,7 +119,7 @@ function drawPlayer(){
     ctx.fillStyle="#00ffe7";
     ctx.shadowBlur=20;
     ctx.shadowColor="#00ffe7";
-    // triangel-skepp
+    // triangel skepp
     ctx.beginPath();
     ctx.moveTo(player.x+player.w/2, player.y);
     ctx.lineTo(player.x, player.y+player.h);
@@ -131,77 +128,73 @@ function drawPlayer(){
     ctx.shadowBlur=0;
 }
 
-function drawRect(o, color, glow=0){
-    ctx.fillStyle=color;
-    ctx.shadowBlur=glow;
-    ctx.shadowColor=color;
-    ctx.fillRect(o.x,o.y,o.w,o.h);
+function drawBullet(b){
+    ctx.fillStyle="#ff2e88";
+    ctx.shadowBlur=15;
+    ctx.shadowColor="#ff2e88";
+    ctx.fillRect(b.x,b.y,b.w,b.h);
     ctx.shadowBlur=0;
 }
 
-function drawEnemy(e){
-    if(e.type==="asteroid"){
-        ctx.fillStyle="#ff8c00";
-        ctx.shadowBlur=15;
-        ctx.shadowColor="#ff8c00";
-        ctx.beginPath();
-        ctx.arc(e.x+e.w/2,e.y+e.h/2,e.w/2,0,Math.PI*2);
-        ctx.fill();
-        ctx.shadowBlur=0;
-    } else {
-        // fiende-skepp
-        ctx.fillStyle="#ff2e88";
-        ctx.shadowBlur=20;
-        ctx.shadowColor="#ff2e88";
-        ctx.beginPath();
-        ctx.moveTo(e.x+e.w/2,e.y);
-        ctx.lineTo(e.x,e.y+e.h);
-        ctx.lineTo(e.x+e.w,e.y+e.h);
-        ctx.fill();
-        ctx.shadowBlur=0;
-    }
+function drawAsteroid(a){
+    ctx.save();
+    ctx.translate(a.x+a.w/2,a.y+a.h/2);
+    ctx.rotate(a.rotation);
+    ctx.fillStyle="#ff8c00";
+    ctx.shadowBlur=10;
+    ctx.shadowColor="#ff8c00";
+    ctx.beginPath();
+    // enkel asteroid med ojämn polygon
+    ctx.moveTo(-a.w/2,-a.h/2 + Math.random()*5);
+    ctx.lineTo(a.w/2 - Math.random()*5, -a.h/2);
+    ctx.lineTo(a.w/2, a.h/2 - Math.random()*5);
+    ctx.lineTo(-a.w/2 + Math.random()*5, a.h/2);
+    ctx.closePath();
+    ctx.fill();
+    ctx.shadowBlur=0;
+    ctx.restore();
+
+    a.rotation += a.rotationSpeed;
 }
 
 function update(){
     if(!running) return;
-    // rörelse
+
     if(keys["ArrowLeft"] || keys["a"]) player.x -= player.speed;
     if(keys["ArrowRight"] || keys["d"]) player.x += player.speed;
     player.x = Math.max(0,Math.min(canvas.width-player.w,player.x));
 
-    // bullets
-    bullets.forEach(b => b.y -= 8);
-    bullets = bullets.filter(b => b.y>-20);
+    bullets.forEach(b=>b.y -=8);
+    bullets = bullets.filter(b=>b.y>-20);
 
-    // enemies
-    enemies.forEach(e => e.y += e.speed);
+    asteroids.forEach(a=> a.y += a.speed);
 
-    // collision bullets -> enemies
-    bullets.forEach((b, bi) => {
-        enemies.forEach((e, ei)=>{
-            if(b.x < e.x+e.w && b.x+b.w>e.x &&
-               b.y < e.y+e.h && b.y+b.h>e.y){
-                enemies.splice(ei,1);
+    // bullets -> asteroids
+    bullets.forEach((b, bi)=>{
+        asteroids.forEach((a, ai)=>{
+            if(b.x<b.x+a.w && b.x+b.w>a.x &&
+               b.y<b.y+a.h && b.y+b.h>a.y){
+                asteroids.splice(ai,1);
                 bullets.splice(bi,1);
-                score += 10;
+                score+=10;
                 scoreEl.textContent = score;
             }
         });
     });
 
-    // enemy hits player
-    enemies.forEach((e,i)=>{
-        if(e.y+e.h > player.y &&
-           e.x < player.x+player.w &&
-           e.x+e.w > player.x){
-            enemies.splice(i,1);
+    // asteroid -> player
+    asteroids.forEach((a,i)=>{
+        if(a.y+a.h>player.y &&
+           a.x < player.x+player.w &&
+           a.x+a.w > player.x){
+            asteroids.splice(i,1);
             lives--;
-            livesEl.textContent=lives;
+            livesEl.textContent = lives;
             if(lives<=0) gameOver();
         }
     });
 
-    enemies = enemies.filter(e => e.y < canvas.height+40);
+    asteroids = asteroids.filter(a=>a.y<canvas.height+50);
 }
 
 function drawStars(){
@@ -214,11 +207,10 @@ function drawStars(){
 function draw(){
     ctx.fillStyle="black";
     ctx.fillRect(0,0,canvas.width,canvas.height);
-
     drawStars();
     drawPlayer();
-    bullets.forEach(b => drawRect(b,"#00ff00",10));
-    enemies.forEach(drawEnemy);
+    bullets.forEach(drawBullet);
+    asteroids.forEach(drawAsteroid);
 }
 
 function loop(){
@@ -228,7 +220,7 @@ function loop(){
 }
 
 function shoot(){
-    bullets.push({x:player.x+player.w/2-2,y:player.y,w:4,h:10});
+    bullets.push({x:player.x+player.w/2-2, y:player.y, w:4, h:10});
 }
 
 function gameOver(){
@@ -244,10 +236,11 @@ document.addEventListener("keydown", e=>{
 });
 document.addEventListener("keyup", e=> keys[e.key]=false);
 
-setInterval(spawnEnemy,700);
+setInterval(spawnAsteroid,700);
 
 init();
 loop();
 </script>
 </body>
 </html>
+
