--- a/spel2/index.html
+++ b/spel2/index.html
@@ -103,7 +103,7 @@ function init(){
 }
 
 function spawnAsteroid(){
-    const size = 20 + Math.random()*20;
+    const size = 25 + Math.random()*20;
     asteroids.push({
         x: Math.random()*(canvas.width-size),
         y: -size,
@@ -111,26 +111,29 @@ function spawnAsteroid(){
         h: size,
         speed: 1 + Math.random()*2,
         rotation: Math.random()*Math.PI*2,
-        rotationSpeed: (Math.random()-0.5)*0.05
+        rotationSpeed: (Math.random()-0.5)*0.03
     });
 }
 
 function drawPlayer(){
     ctx.fillStyle="#00ffe7";
-    ctx.shadowBlur=20;
+    ctx.shadowBlur=10;
     ctx.shadowColor="#00ffe7";
-    // triangel skepp
+    // mer “skepp-look” med cockpit
     ctx.beginPath();
-    ctx.moveTo(player.x+player.w/2, player.y);
-    ctx.lineTo(player.x, player.y+player.h);
-    ctx.lineTo(player.x+player.w, player.y+player.h);
+    ctx.moveTo(player.x + player.w/2, player.y);
+    ctx.lineTo(player.x + player.w*0.1, player.y + player.h*0.8);
+    ctx.lineTo(player.x + player.w*0.3, player.y + player.h*0.6);
+    ctx.lineTo(player.x + player.w*0.7, player.y + player.h*0.6);
+    ctx.lineTo(player.x + player.w*0.9, player.y + player.h*0.8);
+    ctx.closePath();
     ctx.fill();
     ctx.shadowBlur=0;
 }
 
 function drawBullet(b){
     ctx.fillStyle="#ff2e88";
-    ctx.shadowBlur=15;
+    ctx.shadowBlur=5;
     ctx.shadowColor="#ff2e88";
     ctx.fillRect(b.x,b.y,b.w,b.h);
     ctx.shadowBlur=0;
@@ -138,22 +141,20 @@ function drawBullet(b){
 
 function drawAsteroid(a){
     ctx.save();
-    ctx.translate(a.x+a.w/2,a.y+a.h/2);
+    ctx.translate(a.x + a.w/2, a.y + a.h/2);
     ctx.rotate(a.rotation);
-    ctx.fillStyle="#ff8c00";
-    ctx.shadowBlur=10;
-    ctx.shadowColor="#ff8c00";
+    ctx.fillStyle="#888"; // grå asteroid
     ctx.beginPath();
-    // enkel asteroid med ojämn polygon
-    ctx.moveTo(-a.w/2,-a.h/2 + Math.random()*5);
-    ctx.lineTo(a.w/2 - Math.random()*5, -a.h/2);
-    ctx.lineTo(a.w/2, a.h/2 - Math.random()*5);
-    ctx.lineTo(-a.w/2 + Math.random()*5, a.h/2);
+    const spikes = 5 + Math.floor(Math.random()*3);
+    const r = a.w/2;
+    for(let i=0;i<spikes;i++){
+        const angle = (i/spikes)*2*Math.PI;
+        const offset = r*0.3*Math.random();
+        ctx.lineTo(Math.cos(angle)*(r-offset), Math.sin(angle)*(r-offset));
+    }
     ctx.closePath();
     ctx.fill();
-    ctx.shadowBlur=0;
     ctx.restore();
-
     a.rotation += a.rotationSpeed;
 }
 
@@ -169,38 +170,36 @@ function update(){
 
     asteroids.forEach(a=> a.y += a.speed);
 
-    // bullets -> asteroids
     bullets.forEach((b, bi)=>{
         asteroids.forEach((a, ai)=>{
-            if(b.x<b.x+a.w && b.x+b.w>a.x &&
-               b.y<b.y+a.h && b.y+b.h>a.y){
+            if(b.x < a.x + a.w && b.x + b.w > a.x &&
+               b.y < a.y + a.h && b.y + b.h > a.y){
                 asteroids.splice(ai,1);
                 bullets.splice(bi,1);
-                score+=10;
+                score += 10;
                 scoreEl.textContent = score;
             }
         });
     });
 
-    // asteroid -> player
     asteroids.forEach((a,i)=>{
-        if(a.y+a.h>player.y &&
-           a.x < player.x+player.w &&
-           a.x+a.w > player.x){
+        if(a.y + a.h > player.y &&
+           a.x < player.x + player.w &&
+           a.x + a.w > player.x){
             asteroids.splice(i,1);
             lives--;
-            livesEl.textContent = lives;
+            livesEl.textContent=lives;
             if(lives<=0) gameOver();
         }
     });
 
-    asteroids = asteroids.filter(a=>a.y<canvas.height+50);
+    asteroids = asteroids.filter(a => a.y < canvas.height + 50);
 }
 
 function drawStars(){
+    ctx.fillStyle="white";
     for(let i=0;i<30;i++){
-        ctx.fillStyle="white";
-        ctx.fillRect(Math.random()*canvas.width, Math.random()*canvas.height,2,2);
+        ctx.fillRect(Math.random()*canvas.width, Math.random()*canvas.height,1,1);
     }
 }
 
@@ -220,7 +219,7 @@ function loop(){
 }
 
 function shoot(){
-    bullets.push({x:player.x+player.w/2-2, y:player.y, w:4, h:10});
+    bullets.push({x:player.x + player.w/2 - 2, y:player.y, w:4, h:10});
 }
 
 function gameOver(){
@@ -243,4 +242,3 @@ loop();
 </script>
 </body>
 </html>
-
