--- a/spel2/index.html
+++ b/spel2/index.html
@@ -84,7 +84,7 @@ button {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let player, bullets, asteroids, keys, score, lives, running;
+let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty;
 const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
 const overlay = document.getElementById("overlay");
@@ -93,15 +93,20 @@ function init(){
     player = {x:canvas.width/2-20, y:canvas.height-50, w:40, h:40, speed:5};
     bullets = [];
     asteroids = [];
+    powerups = [];
     keys = {};
     score = 0;
     lives = 3;
     running = true;
+    shootCooldown = 0;
+    powerActive = false;
+    difficulty = 700; // spawnintervall i ms
     scoreEl.textContent = score;
     livesEl.textContent = lives;
     overlay.style.display="none";
 }
 
+// ------------------- SPAWN -------------------
 function spawnAsteroid(){
     const size = 25 + Math.random()*20;
     asteroids.push({
@@ -109,17 +114,29 @@ function spawnAsteroid(){
         y: -size,
         w: size,
         h: size,
-        speed: 1 + Math.random()*2,
+        speed: 1 + Math.random()*2 + score/200, // svårare ju mer poäng
         rotation: Math.random()*Math.PI*2,
         rotationSpeed: (Math.random()-0.5)*0.03
     });
 }
 
+function spawnPowerup(){
+    const size = 20;
+    powerups.push({
+        x: Math.random()*(canvas.width-size),
+        y: -size,
+        w: size,
+        h: size,
+        type: Math.random()<0.5 ? "doubleShot" : "fastShot",
+        speed: 2
+    });
+}
+
+// ------------------- DRAW -------------------
 function drawPlayer(){
     ctx.fillStyle="#00ffe7";
     ctx.shadowBlur=10;
     ctx.shadowColor="#00ffe7";
-    // mer “skepp-look” med cockpit
     ctx.beginPath();
     ctx.moveTo(player.x + player.w/2, player.y);
     ctx.lineTo(player.x + player.w*0.1, player.y + player.h*0.8);
@@ -143,7 +160,7 @@ function drawAsteroid(a){
     ctx.save();
     ctx.translate(a.x + a.w/2, a.y + a.h/2);
     ctx.rotate(a.rotation);
-    ctx.fillStyle="#888"; // grå asteroid
+    ctx.fillStyle="#888"; 
     ctx.beginPath();
     const spikes = 5 + Math.floor(Math.random()*3);
     const r = a.w/2;
@@ -158,18 +175,30 @@ function drawAsteroid(a){
     a.rotation += a.rotationSpeed;
 }
 
+function drawPowerup(p){
+    ctx.fillStyle = p.type==="doubleShot"?"#ffeb3b":"#00ff00";
+    ctx.beginPath();
+    ctx.arc(p.x + p.w/2, p.y + p.h/2, p.w/2, 0, Math.PI*2);
+    ctx.fill();
+}
+
+// ------------------- UPDATE -------------------
 function update(){
     if(!running) return;
 
+    // player move
     if(keys["ArrowLeft"] || keys["a"]) player.x -= player.speed;
     if(keys["ArrowRight"] || keys["d"]) player.x += player.speed;
     player.x = Math.max(0,Math.min(canvas.width-player.w,player.x));
 
+    // bullets
     bullets.forEach(b=>b.y -=8);
     bullets = bullets.filter(b=>b.y>-20);
 
+    // asteroids
     asteroids.forEach(a=> a.y += a.speed);
 
+    // bullets -> asteroids
     bullets.forEach((b, bi)=>{
         asteroids.forEach((a, ai)=>{
             if(b.x < a.x + a.w && b.x + b.w > a.x &&
@@ -178,10 +207,14 @@ function update(){
                 bullets.splice(bi,1);
                 score += 10;
                 scoreEl.textContent = score;
+                if(score % 50 === 0 && difficulty > 300){
+                    difficulty -= 20; // svårare ju mer poäng
+                }
             }
         });
     });
 
+    // asteroids -> player
     asteroids.forEach((a,i)=>{
         if(a.y + a.h > player.y &&
            a.x < player.x + player.w &&
@@ -192,10 +225,26 @@ function update(){
             if(lives<=0) gameOver();
         }
     });
-
     asteroids = asteroids.filter(a => a.y < canvas.height + 50);
+
+    // powerups
+    powerups.forEach(p=> p.y += p.speed);
+    // player collect powerup
+    powerups.forEach((p,i)=>{
+        if(p.y + p.h > player.y &&
+           p.x < player.x + player.w &&
+           p.x + p.w > player.x){
+            if(p.type==="doubleShot") powerActive = "doubleShot";
+            if(p.type==="fastShot") shootCooldown = Math.max(0, shootCooldown-5);
+            powerups.splice(i,1);
+        }
+    });
+    powerups = powerups.filter(p => p.y < canvas.height + 30);
+
+    if(shootCooldown>0) shootCooldown--;
 }
 
+// ------------------- DRAW -------------------
 function drawStars(){
     ctx.fillStyle="white";
     for(let i=0;i<30;i++){
@@ -210,8 +259,10 @@ function draw(){
     drawPlayer();
     bullets.forEach(drawBullet);
     asteroids.forEach(drawAsteroid);
+    powerups.forEach(drawPowerup);
 }
 
+// ------------------- GAME LOOP -------------------
 function loop(){
     update();
     draw();
@@ -219,7 +270,13 @@ function loop(){
 }
 
 function shoot(){
+    if(shootCooldown>0) return;
     bullets.push({x:player.x + player.w/2 - 2, y:player.y, w:4, h:10});
+    if(powerActive==="doubleShot"){
+        bullets.push({x:player.x + player.w/2 - 12, y:player.y, w:4, h:10});
+        bullets.push({x:player.x + player.w/2 + 8, y:player.y, w:4, h:10});
+    }
+    shootCooldown = 15;
 }
 
 function gameOver(){
@@ -227,15 +284,20 @@ function gameOver(){
     overlay.style.display="flex";
 }
 
-function restart(){init();}
+function restart(){
+    init();
+}
 
+// ------------------- INPUT -------------------
 document.addEventListener("keydown", e=>{
     keys[e.key]=true;
     if(e.key===" ") shoot();
 });
 document.addEventListener("keyup", e=> keys[e.key]=false);
 
-setInterval(spawnAsteroid,700);
+// ------------------- SPAWN INTERVALL -------------------
+setInterval(()=>spawnAsteroid(), difficulty);
+setInterval(()=>{ if(Math.random()<0.3) spawnPowerup(); }, 5000);
 
 init();
 loop();
