--- a/spel2/index.html
+++ b/spel2/index.html
@@ -52,7 +52,7 @@ button {
 <div class="wrapper">
     <h1>🚀 Asteroid Blaster</h1>
     <div class="ui">
-        Score: <span id="score">0</span> | Liv: <span id="lives">3</span>
+        Score: <span id="score">0</span> | Highscore: <span id="highscore">0</span> | Liv: <span id="lives">3</span>
     </div>
     <canvas id="game" width="420" height="500"></canvas>
     <div class="overlay" id="overlay">
@@ -65,10 +65,14 @@ button {
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
-let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty;
+let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty, highscore;
 const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
+const highscoreEl = document.getElementById("highscore");
 const overlay = document.getElementById("overlay");
+
+highscore = parseInt(localStorage.getItem("asteroidHighscore")) || 0;
+highscoreEl.textContent = highscore;
 
 function init(){
     player = {x:canvas.width/2-20, y:canvas.height-50, w:40, h:40, speed:5};
@@ -81,7 +85,7 @@ function init(){
     running = true;
     shootCooldown = 0;
     powerActive = false;
-    difficulty = 1400; // längre intervall → färre asteroider
+    difficulty = 1400;
     scoreEl.textContent = score;
     livesEl.textContent = lives;
     overlay.style.display="none";
@@ -89,7 +93,7 @@ function init(){
 
 // ------------------- SPAWN -------------------
 function spawnAsteroid(){
-    if(asteroids.length >= 4) return; // max 4 asteroider samtidigt
+    if(asteroids.length >= 4) return;
     const size = 25 + Math.random()*20;
     asteroids.push({
         x: Math.random()*(canvas.width-size),
@@ -118,24 +122,38 @@ function spawnPowerup(){
 function drawPlayer(){
     ctx.save();
     ctx.translate(player.x + player.w/2, player.y + player.h/2);
+
+    // Skepp mer realistiskt: kropp, motorer, cockpit
     ctx.fillStyle="#00ffe7";
     ctx.shadowBlur=10;
     ctx.shadowColor="#00ffe7";
     ctx.beginPath();
-    ctx.moveTo(0, -player.h/2);
-    ctx.lineTo(-player.w/2, player.h/4);
-    ctx.lineTo(-player.w/6, player.h/4);
-    ctx.lineTo(-player.w/6, player.h/2);
-    ctx.lineTo(player.w/6, player.h/2);
-    ctx.lineTo(player.w/6, player.h/4);
-    ctx.lineTo(player.w/2, player.h/4);
+    ctx.moveTo(0, -player.h/2);           // spets fram
+    ctx.lineTo(-player.w/2.5, player.h/6);
+    ctx.lineTo(-player.w/6, player.h/6);
+    ctx.lineTo(-player.w/6, player.h/2);  // vänster motor
+    ctx.lineTo(player.w/6, player.h/2);   // höger motor
+    ctx.lineTo(player.w/6, player.h/6);
+    ctx.lineTo(player.w/2.5, player.h/6);
     ctx.closePath();
     ctx.fill();
-    // cockpit
+
+    // Cockpit
     ctx.fillStyle="#88ffff";
     ctx.beginPath();
     ctx.ellipse(0, -player.h/8, player.w/8, player.h/8, 0, 0, Math.PI*2);
     ctx.fill();
+
+    // Motor glow
+    ctx.fillStyle="#ff9900";
+    ctx.globalAlpha=0.5;
+    ctx.beginPath();
+    ctx.ellipse(-player.w/12, player.h/2, player.w/12, player.h/8, 0, 0, Math.PI*2);
+    ctx.fill();
+    ctx.beginPath();
+    ctx.ellipse(player.w/12, player.h/2, player.w/12, player.h/8, 0, 0, Math.PI*2);
+    ctx.fill();
+    ctx.globalAlpha=1;
     ctx.restore();
     ctx.shadowBlur=0;
 }
@@ -203,6 +221,11 @@ function update(){
                 bullets.splice(bi,1);
                 score += 10;
                 scoreEl.textContent = score;
+                if(score > highscore){
+                    highscore = score;
+                    highscoreEl.textContent = highscore;
+                    localStorage.setItem("asteroidHighscore", highscore);
+                }
                 if(score % 100 === 0 && difficulty > 500){
                     difficulty -= 20;
                 }
@@ -210,7 +233,7 @@ function update(){
         });
     });
 
-    // Om asteroider faller förbi spelaren → tappar liv
+    // Asteroider som faller förbi
     asteroids.forEach((a,i)=>{
         if(a.y > canvas.height){
             asteroids.splice(i,1);
@@ -279,9 +302,8 @@ function restart(){ init(); }
 document.addEventListener("keydown", e=>{ keys[e.key]=true; if(e.key===" ") shoot(); });
 document.addEventListener("keyup", e=> keys[e.key]=false);
 
-// ------------------- SPAWN INTERVALL -------------------
 setInterval(()=>spawnAsteroid(), difficulty);
-setInterval(()=>spawnPowerup(), 4000); // fler power-ups oftare
+setInterval(()=>spawnPowerup(), 4000);
 
 init();
 loop();
