--- a/spel2/index.html
+++ b/spel2/index.html
@@ -68,7 +68,6 @@ const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 let player, bullets, asteroids, powerups, keys, score, lives, running, shootCooldown, powerActive, difficulty, highscore, maxShots;
-let asteroidInterval, powerupInterval;
 const scoreEl = document.getElementById("score");
 const livesEl = document.getElementById("lives");
 const highscoreEl = document.getElementById("highscore");
@@ -93,20 +92,13 @@ function init(){
     scoreEl.textContent = score;
     livesEl.textContent = lives;
     overlay.style.display="none";
-
-    // Rensa gamla intervaller om de finns
-    if(asteroidInterval) clearInterval(asteroidInterval);
-    if(powerupInterval) clearInterval(powerupInterval);
-
-    asteroidInterval = setInterval(()=>spawnAsteroid(), difficulty);
-    powerupInterval = setInterval(()=>spawnPowerup(), 4000);
 }
 
 // ------------------- SPAWN -------------------
 function spawnAsteroid(){
     if(asteroids.length >= 4) return;
     const size = 25 + Math.random()*20;
-    const life = 1 + Math.floor(Math.random()*3);
+    const life = 1 + Math.floor(Math.random()*3); // 1-3 liv per asteroid
     asteroids.push({
         x: Math.random()*(canvas.width-size),
         y: -size,
@@ -124,7 +116,7 @@ function spawnPowerup(){
     const typeRand = Math.random();
     let type = "doubleShot";
     if(typeRand < 0.25) type = "fastShot";
-    else if(typeRand < 0.5) type = "extraShot";
+    else if(typeRand < 0.5) type = "extraShot"; // ökar max skott
     powerups.push({
         x: Math.random()*(canvas.width-size),
         y: -size,
@@ -154,11 +146,13 @@ function drawPlayer(){
     ctx.closePath();
     ctx.fill();
 
+    // cockpit
     ctx.fillStyle="#88ffff";
     ctx.beginPath();
     ctx.ellipse(0, -player.h/8, player.w/8, player.h/8, 0, 0, Math.PI*2);
     ctx.fill();
 
+    // motor glow
     ctx.fillStyle="#ff9900";
     ctx.globalAlpha=0.5;
     ctx.beginPath();
@@ -243,6 +237,7 @@ function update(){
         });
     });
 
+    // Asteroider som faller förbi spelaren
     asteroids.forEach((a,i)=>{
         if(a.y > canvas.height){
             asteroids.splice(i,1);
@@ -307,17 +302,13 @@ function shoot(){
 function gameOver(){ running=false; overlay.style.display="flex"; }
 function restart(){ init(); }
 
-function goHome(){
-    running = false;         // Stoppa loop
-    keys = {};               // Blockera tangentinput
-    bullets = []; asteroids = []; powerups = []; // Rensa objekt
-    if(asteroidInterval) clearInterval(asteroidInterval);
-    if(powerupInterval) clearInterval(powerupInterval);
-    window.location.href="index.html"; // Till startsidan
-}
+function goHome(){ running=false; window.location.href="index.html"; }
 
-document.addEventListener("keydown", e=>{ keys[e.key]=true; if(e.key===" " && running) shoot(); });
+document.addEventListener("keydown", e=>{ keys[e.key]=true; if(e.key===" ") shoot(); });
 document.addEventListener("keyup", e=> keys[e.key]=false);
+
+setInterval(()=>spawnAsteroid(), difficulty);
+setInterval(()=>spawnPowerup(), 4000);
 
 init();
 loop();
