--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <section class="games">
     <a href="spel1/" class="game-card">🐍 Neon Serpent</a>
-    <a href="spel3/" class="game-card">🧠 Memory</a>
+    <a href="spel3/" class="game-card">🧠 ryberg-slotts</a>
     <a href="spel2/" class="game-card">🚀 Space Shooter</a>
 </section>
 
