--- a/spel2/index.html
+++ b/spel2/index.html
@@ -301,8 +301,8 @@ function shoot(){
 
 function gameOver(){ running=false; overlay.style.display="flex"; }
 function restart(){ init(); }
-
-function goHome(){ running=false; window.location.href="index.html"; }
+    
+window.location.href="../index.html";
 
 document.addEventListener("keydown", e=>{ keys[e.key]=true; if(e.key===" ") shoot(); });
 document.addEventListener("keyup", e=> keys[e.key]=false);
