--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <section class="games">
     <a href="spel1/" class="game-card">🐍 Neon Serpent</a>
     <a href="spel3/" class="game-card">🧠 ryberg-slotts</a>
-    <a href="spel2/" class="game-card">🚀 Space Shooter</a>
+    <a href="spel2/index.html" class="game-card">🚀 Space Shooter</a>
 </section>
 
 <footer>
